fix bug with fontsizes on smaller devices (finally)

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@ body, html {
   height: 100%;
   font-family: var(--main-font);
   overflow-x: hidden;
+  text-size-adjust: none;
   -webkit-text-size-adjust: none;
 }
 
