--- a/src/index.css
+++ b/src/index.css
@@ -907,7 +907,6 @@
   .firstSection-aboutMe .aboutPopisek p {
     margin-top: var(--space-s);
     font-size: var(--size-s2);
-    color: red;
   }
 
   .firstSection-aboutMe .aboutPopisek h4 {
@@ -935,7 +934,6 @@
 
   .portfolioPopisek ul {
     font-size: var(--size-s2);
-    color: red;
   }
 }
 
@@ -993,7 +991,6 @@
   .firstSection-aboutMe .aboutPopisek li,
   .portfolioPopisek ul {
     font-size: var(--size-s);
-    color: blue;
   }
 
 }
